<?xml version="1.0" encoding="utf-8"?>
<com.takwolf.android.insetswidget.InsetsLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:windowBackground"
    app:isw_insetsType="statusBars|navigationBars"
    app:isw_insetsPaddingBottom="false"
    app:isw_insetsColorTop="@color/app_primary_variant"
    app:isw_insetsColorBottom="@color/translucent_system_bars"
    app:isw_insetsColorLeft="@android:color/black"
    app:isw_insetsColorRight="@android:color/black">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_primary"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.App.ActionBar"
        app:title="@string/about"
        app:titleCentered="true"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:orientation="vertical"
                android:background="?colorSurface"
                android:elevation="@dimen/surface_elevation">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="64dp"
                    android:src="?logoOnSurface"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_domain"
                    android:textColor="?colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/app_slogan"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="14sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:background="?colorSurface"
                android:elevation="@dimen/surface_elevation">

                <LinearLayout
                    android:id="@+id/btn_version_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="?selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version_name"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp"
                        tools:text="0.0.0" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="?android:listDivider" />

                <LinearLayout
                    android:id="@+id/btn_open_source_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="?selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_source_url"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/open_source_url_content"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="?android:listDivider" />

                <LinearLayout
                    android:id="@+id/btn_about_cnode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="?selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_cnode"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/about_cnode_content"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="?android:listDivider" />

                <LinearLayout
                    android:id="@+id/btn_about_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="?selectableItemBackground">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_author"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/about_author_content"
                        android:textColor="?android:textColorSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:background="?colorSurface"
                android:elevation="@dimen/surface_elevation">

                <TextView
                    android:id="@+id/btn_open_source_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/open_source_license"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:background="?selectableItemBackground" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/copyright"
                android:textColor="?android:textColorSecondary"
                android:textSize="12sp"
                android:gravity="center" />

            <com.takwolf.android.insetswidget.InsetsSpace
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isw_insetsType="navigationBars" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</com.takwolf.android.insetswidget.InsetsLinearLayout>
