<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:elevation="@dimen/editor_bar_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/widgetBackground"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="@dimen/app_bar_elevation"
                app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
                app:title="@string/new_topic"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:background="?attr/widgetBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/send_to_tab_$"
                    android:textColor="@color/color_accent"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spn_tab"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_bar_size"
                    android:entries="@array/tabs" />

            </LinearLayout>

            <View style="@style/AppWidget.DeepLine" />

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:singleLine="true"
                android:hint="@string/create_topic_title_hint"
                android:background="?attr/widgetBackground" />

            <View style="@style/AppWidget.DeepLine" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:background="?attr/widgetBackground">

            <include layout="@layout/widget_editor_bar" />

        </HorizontalScrollView>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/widgetBackgroundDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/edt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="start"
            android:hint="@string/create_topic_content_hint"
            android:textSize="16sp"
            android:minLines="10"
            android:background="@android:color/transparent" />

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
